--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "backend/index.ts",
   "scripts": {
     "dev": "nodemon backend/index.ts",
-    "start": "ts-node backend/index.ts"
+    "start": "ts-node backend/index.ts",
+    "db:populate": "ts-node scripts/populate-db.ts"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,12 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@prisma/client": "^5.11.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "nodemon": "^3.1.11",
+    "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
