--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "homepage": "https://github.com/Chukyy712/GETracker#readme",
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "node-fetch": "^3.3.2"
+    "express-rate-limit": "^8.2.1",
+    "node-fetch": "^3.3.2",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@prisma/client": "^5.11.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
