--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # Prisma
 /prisma/dev.db
 /prisma/dev.db-journal
+/prisma/prisma/dev.db
+/prisma/prisma/dev.db-journal
+*.db
+*.db-journal
 
 # Environment variables
 .env
